force-app/main/default/objects/Patient__c/Patient__c.object-meta.xml
<CustomObject>
    <description>this is a table which is used to store patient details in the Apollo app</description>
    <label>Patient</label>
    <nameField>
        <label>Registration number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>