force-app/main/default/objects/Patient__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sex__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andrology</fullName>
            </value>
            <value>
                <fullName>cardiology</fullName>
            </value>
            <value>
                <fullName>general</fullName>
            </value>
            <value>
                <fullName>Gynaecology</fullName>
            </value>
            <value>
                <fullName>Haematology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>ob/gyn</fullName>
            </value>
            <value>
                <fullName>ortho</fullName>
            </value>
            <value>
                <fullName>Sinology</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
            <value>
                <fullName>Gyno</fullName>
            </value>
            <value>
                <fullName>Ent</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>