force-app/main/default/objects/Patient__c/fields/E_Mail_ID__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>this field can capture the e mail id of the patient</description>
    <inlineHelpText>Kindly enter the e-mail id of the patient</inlineHelpText>
    <label>E-Mail ID</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>