force-app/main/default/objects/Patient__c/fields/Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fee_Paid__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Fee Paid</label>
    <type>Checkbox</type>
</CustomField>