force-app/main/default/objects/Patient__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Enter first name carefully don&apos;t use any short names</description>
    <inlineHelpText>Enter first name carefully don&apos;t use any short names</inlineHelpText>
    <label>First Name</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>