force-app/main/default/objects/Patient__c/fields/Patient_Age__c.field-meta.xml
<CustomField>
    <fullName>Patient_Age__c</fullName>
    <formula>Year(Today())-Year(( Patient_Date_of_Birth__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>