force-app/main/default/objects/Patient__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>this is to capture the phone number of the patient</description>
    <inlineHelpText>Kindly enter the phone number of the patient</inlineHelpText>
    <label>Phone Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>