force-app/main/default/objects/Patient__c/fields/Primary_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Primary_Analysis__c</fullName>
    <label>Facility Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC Ward</fullName>
            </value>
            <value>
                <fullName>General Ward</fullName>
            </value>
            <value>
                <fullName>Separate Room</fullName>
            </value>
            <value>
                <fullName>Common Room</fullName>
            </value>
            <value>
                <fullName>Dedicated nurse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>