force-app/main/default/objects/Patient__c/fields/Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fee__c</fullName>
    <defaultValue>400</defaultValue>
    <label>Registration Fee</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>