force-app/main/default/objects/Patient__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Patient</relationshipLabel>
    <relationshipName>Patient</relationshipName>
    <type>Lookup</type>
</CustomField>