force-app/main/default/objects/Patient__c/fields/total_amount_paid__c.field-meta.xml
<CustomField>
    <fullName>total_amount_paid__c</fullName>
    <label>total amount paid</label>
    <summarizedField>Payment__c.Amount_Paid__c</summarizedField>
    <summaryForeignKey>Payment__c.Registration_number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>