force-app/main/default/objects/Patient__c/recordTypes/patient_1.recordType-meta.xml
<RecordType>
    <fullName>patient_1</fullName>
    <active>true</active>
    <label>patient 1</label>
</RecordType>