force-app/main/default/objects/Patient__c/recordTypes/structured_patient.recordType-meta.xml
<RecordType>
    <fullName>structured_patient</fullName>
    <active>false</active>
    <label>structured patient</label>
</RecordType>