force-app/main/default/objects/Patient__c/recordTypes/system_patient.recordType-meta.xml
<RecordType>
    <fullName>system_patient</fullName>
    <active>true</active>
    <label>system patient</label>
</RecordType>