force-app/main/default/objects/Patient__c/validationRules/Phone_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number</fullName>
    <active>true</active>
    <errorConditionFormula>len(text(Phone_Number__c))!=10</errorConditionFormula>
    <errorMessage>kindly enter a correct phone number</errorMessage>
</ValidationRule>